[package]
name = "rsyslog-ssh-geoip-pipeline"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
clap = "2.33"
chrono = "0.4.15"
geohash = { version = "0.10" }
failure = { version = "0.1" }
influx_db_client = "0.4.2"
maxminddb = "0.14"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.2", features = ["macros", "io-util", "net", "tcp"] }
